working OAUTH and routes
